src/controlador/Compilador.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Compilador.java */
package controlador;

import java.io.BufferedReader;
import java.io.ByteArrayInputStream;
import java.io.File;
import java.io.FileReader;
import java.io.IOException;
import java.io.InputStream;
import java.nio.charset.StandardCharsets;
import java.util.ArrayList;
import javax.swing.JOptionPane;
import javax.swing.JFileChooser;
import javax.swing.filechooser.FileNameExtensionFilter;

public class Compilador/*@bgen(jjtree)*/implements CompiladorTreeConstants, CompiladorConstants {/*@bgen(jjtree)*/
  protected static JJTCompiladorState jjtree = new JJTCompiladorState();private static ArrayList < String > listaSimbolos;
  static int numero = 0;

  public Compilador()
  {
    listaSimbolos = new ArrayList < String > ();
  }

  public ArrayList < String > getListaSimbolos()
  {
    return listaSimbolos;
  }

  private static void grabarLexema(int n, String token, String lexema, int nL, int nC)
  {
    String simbolo = "";
    simbolo = token + ";" + lexema;
    listaSimbolos.add(simbolo);
    System.out.println(n + "-\u005ct Token: " + token + ",\u005ct Lexema:" + lexema + ",\u005ct Linea: " + nL + ",\u005ct Columna:" + nC);
  }

  private static void grabarDatosPieza(int n, String token, Token pieza)
  {
    grabarLexema(n, token, pieza.image, pieza.beginLine, pieza.beginColumn);
  }

  /**
	* Metodo para leer el codigo desde la consola
	*/
  private static void leerConsola() throws ParseException
  {
    System.out.println("---------- INICIANDO AN\u00c1LISIS L\u00c9XICO ----------");
    System.out.println("Ingrese el c\u00f3digo a analizar:");
    Compilador parser = new Compilador(System.in);
    //    parser.TokenList();
    parser.Programa();
    System.out.println("Analisis terminado:");
    System.out.println("no se han hallado errores l\u00e9xicos");
  }

  /**
	* Metodo para leer el codigo desde un archivo
	*/
  private static void leerArchivo() throws IOException, ParseException
  {
    /**llamamos el metodo que permite cargar la ventana*/
    JFileChooser file = new JFileChooser();
    FileNameExtensionFilter filtro = new FileNameExtensionFilter("SHTML", "shtml");
    file.setFileFilter(filtro);
    file.showOpenDialog(null);
    /**abrimos el archivo seleccionado*/
    File abre = file.getSelectedFile();
    String nombreArchivo = "";
    String texto = "";
    String aux = "";
    /**recorremos el archivo, lo leemos para plasmarlo en el area de texto*/
    if (abre != null)
    {
      nombreArchivo = abre.getName();
      FileReader archivos = new FileReader(abre);
      BufferedReader lee = new BufferedReader(archivos);
      while ((aux = lee.readLine()) != null)
      {
        texto += aux + "\u005cn";
      }
      lee.close();
    }
    InputStream stream = new ByteArrayInputStream(texto.getBytes(StandardCharsets.UTF_8));
    System.out.println("---------- INICIANDO AN\u00c1LISIS L\u00c9XICO PARA EL ARCHIVO " + nombreArchivo + " ----------");
    System.out.println("Ingrese el c\u00f3digo a analizar:");
    Compilador parser = new Compilador(stream);
    //    parser.TokenList();
    parser.Programa();
    System.out.println("Analisis terminado:");
    System.out.println("no se han hallado errores l\u00e9xicos");
  }

  /**
	* Metodo principal
	*/
  public static void main(String args []) throws ParseException, IOException
  {
    try
    {
      Object [] botones =
      {
        "Salir", "Por Consola", "Seleccionar un archivo .shtml"
      }
      ;
      Object [] mensajes =
      {
        "Bienvenido", "Como deseas analizar el codigo fuente?"
      }
      ;
      int variable = JOptionPane.showOptionDialog(null, mensajes,
      "Analizador Lexico", JOptionPane.YES_NO_CANCEL_OPTION, JOptionPane.QUESTION_MESSAGE,
      null, botones, botones [2]);
      switch (variable)
      {
        case 0 | - 1 : System.exit(0);
        break;
        case 1 : leerConsola();
        break;
        case 2 : leerArchivo();
        break;
      }
    }
    catch (TokenMgrError te)
    {
      System.err.println("Se han encontrado errores lexicos.");
      System.err.println(te.getMessage());
    }
    catch (ParseException e)
    {
      System.err.println("Analizador: Se han encontrado errores en el analisis.");
      System.err.println(e.getMessage());
    }
    catch (IOException ex)
    {
      System.err.println("Cargar: El archivo no se ha podido cargar.");
      System.err.println(ex.getMessage());
    }
  }

// ------------------------------------------------------------
// -- ANALIZADOR SINTACTICO -----------------------------------
// ------------------------------------------------------------
  static final public SimpleNode Programa() throws ParseException {
                         /*@bgen(jjtree) Programa */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAMA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      NombrePagina();
      TituloPagina();
      CuerpoPrograma();
      jj_consume_token(0);
                                                           jjtree.closeNodeScope(jjtn000, true);
                                                           jjtc000 = false;
                                                           {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void NombrePagina() throws ParseException {
                       /*@bgen(jjtree) NombrePagina */
                        SimpleNode jjtn000 = new SimpleNode(JJTNOMBREPAGINA);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(PAGINA);
                SimpleNode jjtn001 = new SimpleNode(JJTPAGINA);
                boolean jjtc001 = true;
                jjtree.openNodeScope(jjtn001);
      try {
                jjtree.closeNodeScope(jjtn001,  true);
                jjtc001 = false;
               jjtn001.value = t.image;
      } finally {
                if (jjtc001) {
                  jjtree.closeNodeScope(jjtn001,  true);
                }
      }
      t = jj_consume_token(NOMBREARCHIVO);
                                                                            SimpleNode jjtn002 = new SimpleNode(JJTNOMBREARCHIVO);
                                                                            boolean jjtc002 = true;
                                                                            jjtree.openNodeScope(jjtn002);
      try {
                                                                            jjtree.closeNodeScope(jjtn002,  true);
                                                                            jjtc002 = false;
                                                                           jjtn002.value = t.image;
      } finally {
                                                                            if (jjtc002) {
                                                                              jjtree.closeNodeScope(jjtn002,  true);
                                                                            }
      }
      jj_consume_token(SEMIC);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void TituloPagina() throws ParseException {
                       /*@bgen(jjtree) TituloPagina */
                        SimpleNode jjtn000 = new SimpleNode(JJTTITULOPAGINA);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(TITULO);
                SimpleNode jjtn001 = new SimpleNode(JJTTITULO);
                boolean jjtc001 = true;
                jjtree.openNodeScope(jjtn001);
      try {
                jjtree.closeNodeScope(jjtn001,  true);
                jjtc001 = false;
               jjtn001.value = t.image;
      } finally {
                if (jjtc001) {
                  jjtree.closeNodeScope(jjtn001,  true);
                }
      }
      jj_consume_token(ASIGNACION);
      t = jj_consume_token(CADENA);
                                                                                    SimpleNode jjtn002 = new SimpleNode(JJTPUNTOYCOMA);
                                                                                    boolean jjtc002 = true;
                                                                                    jjtree.openNodeScope(jjtn002);
      try {
                                                                                    jjtree.closeNodeScope(jjtn002,  true);
                                                                                    jjtc002 = false;
                                                                                   jjtn002.value = t.image;
      } finally {
                                                                                    if (jjtc002) {
                                                                                      jjtree.closeNodeScope(jjtn002,  true);
                                                                                    }
      }
      jj_consume_token(SEMIC);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void CuerpoPrograma() throws ParseException {
                         /*@bgen(jjtree) CuerpoPrograma */
                          SimpleNode jjtn000 = new SimpleNode(JJTCUERPOPROGRAMA);
                          boolean jjtc000 = true;
                          jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(INICIO);
                SimpleNode jjtn001 = new SimpleNode(JJTINICIO);
                boolean jjtc001 = true;
                jjtree.openNodeScope(jjtn001);
      try {
                jjtree.closeNodeScope(jjtn001,  true);
                jjtc001 = false;
               jjtn001.value = t.image;
      } finally {
                if (jjtc001) {
                  jjtree.closeNodeScope(jjtn001,  true);
                }
      }
      ListadoSentencias();
      t = jj_consume_token(FIN);
                                                                                      SimpleNode jjtn002 = new SimpleNode(JJTFIN);
                                                                                      boolean jjtc002 = true;
                                                                                      jjtree.openNodeScope(jjtn002);
      try {
                                                                                      jjtree.closeNodeScope(jjtn002,  true);
                                                                                      jjtc002 = false;
                                                                                     jjtn002.value = t.image;
      } finally {
                                                                                      if (jjtc002) {
                                                                                        jjtree.closeNodeScope(jjtn002,  true);
                                                                                      }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void ListadoSentencias() throws ParseException {
                            /*@bgen(jjtree) ListadoSentencias */
                             SimpleNode jjtn000 = new SimpleNode(JJTLISTADOSENTENCIAS);
                             boolean jjtc000 = true;
                             jjtree.openNodeScope(jjtn000);Token t;
    try {
      Sentencia();
      jj_consume_token(SEMIC);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONTENEDOR:
      case FORMULARIO:
      case CAMPOTEXTO:
      case SELECTOR:
      case BOTON:
      case IDENTIFICADOR:
        ListadoSentencias();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Sentencia() throws ParseException {
                    /*@bgen(jjtree) Sentencia */
  SimpleNode jjtn000 = new SimpleNode(JJTSENTENCIA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONTENEDOR:
      case FORMULARIO:
      case CAMPOTEXTO:
      case SELECTOR:
      case BOTON:
        Declaracion();
        break;
      case IDENTIFICADOR:
        Asignacion();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Declaracion() throws ParseException {
                      /*@bgen(jjtree) Declaracion */
                       SimpleNode jjtn000 = new SimpleNode(JJTDECLARACION);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token t;
    try {
      TipoDato();
      t = jj_consume_token(IDENTIFICADOR);
                                  SimpleNode jjtn001 = new SimpleNode(JJTIDENTIFICADOR);
                                  boolean jjtc001 = true;
                                  jjtree.openNodeScope(jjtn001);
      try {
                                  jjtree.closeNodeScope(jjtn001,  true);
                                  jjtc001 = false;
                                 jjtn001.value = t.image;
      } finally {
                                  if (jjtc001) {
                                    jjtree.closeNodeScope(jjtn001,  true);
                                  }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void TipoDato() throws ParseException {
                   /*@bgen(jjtree) TipoDato */
                    SimpleNode jjtn000 = new SimpleNode(JJTTIPODATO);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONTENEDOR:
        t = jj_consume_token(CONTENEDOR);
                          SimpleNode jjtn001 = new SimpleNode(JJTCONTENEDOR);
                          boolean jjtc001 = true;
                          jjtree.openNodeScope(jjtn001);
        try {
                          jjtree.closeNodeScope(jjtn001,  true);
                          jjtc001 = false;
                    jjtn001.value = t.image;
        } finally {
                          if (jjtc001) {
                            jjtree.closeNodeScope(jjtn001,  true);
                          }
        }
        break;
      case FORMULARIO:
        t = jj_consume_token(FORMULARIO);
                          SimpleNode jjtn002 = new SimpleNode(JJTFORMULARIO);
                          boolean jjtc002 = true;
                          jjtree.openNodeScope(jjtn002);
        try {
                          jjtree.closeNodeScope(jjtn002,  true);
                          jjtc002 = false;
                    jjtn002.value = t.image;
        } finally {
                          if (jjtc002) {
                            jjtree.closeNodeScope(jjtn002,  true);
                          }
        }
        break;
      case SELECTOR:
        t = jj_consume_token(SELECTOR);
                          SimpleNode jjtn003 = new SimpleNode(JJTSELECTOR);
                          boolean jjtc003 = true;
                          jjtree.openNodeScope(jjtn003);
        try {
                          jjtree.closeNodeScope(jjtn003,  true);
                          jjtc003 = false;
                  jjtn003.value = t.image;
        } finally {
                          if (jjtc003) {
                            jjtree.closeNodeScope(jjtn003,  true);
                          }
        }
        break;
      case CAMPOTEXTO:
        t = jj_consume_token(CAMPOTEXTO);
                          SimpleNode jjtn004 = new SimpleNode(JJTCAMPOTEXTO);
                          boolean jjtc004 = true;
                          jjtree.openNodeScope(jjtn004);
        try {
                          jjtree.closeNodeScope(jjtn004,  true);
                          jjtc004 = false;
                    jjtn004.value = t.image;
        } finally {
                          if (jjtc004) {
                            jjtree.closeNodeScope(jjtn004,  true);
                          }
        }
        break;
      case BOTON:
        t = jj_consume_token(BOTON);
                          SimpleNode jjtn005 = new SimpleNode(JJTBOTON);
                          boolean jjtc005 = true;
                          jjtree.openNodeScope(jjtn005);
        try {
                          jjtree.closeNodeScope(jjtn005,  true);
                          jjtc005 = false;
                 jjtn005.value = t.image;
        } finally {
                          if (jjtc005) {
                            jjtree.closeNodeScope(jjtn005,  true);
                          }
        }
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Asignacion() throws ParseException {
                     /*@bgen(jjtree) Asignacion */
                      SimpleNode jjtn000 = new SimpleNode(JJTASIGNACION);
                      boolean jjtc000 = true;
                      jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFICADOR);
                       SimpleNode jjtn001 = new SimpleNode(JJTIDENT);
                       boolean jjtc001 = true;
                       jjtree.openNodeScope(jjtn001);
      try {
                       jjtree.closeNodeScope(jjtn001,  true);
                       jjtc001 = false;
                      jjtn001.value = t.image;
      } finally {
                       if (jjtc001) {
                         jjtree.closeNodeScope(jjtn001,  true);
                       }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LLAMADOMET:
        t = jj_consume_token(LLAMADOMET);
                                                                                 SimpleNode jjtn002 = new SimpleNode(JJTLLAMMET);
                                                                                 boolean jjtc002 = true;
                                                                                 jjtree.openNodeScope(jjtn002);
        try {
                                                                                 jjtree.closeNodeScope(jjtn002,  true);
                                                                                 jjtc002 = false;
                                                                                jjtn002.value = t.image;
        } finally {
                                                                                 if (jjtc002) {
                                                                                   jjtree.closeNodeScope(jjtn002,  true);
                                                                                 }
        }
        Atributo();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(ASIGNACION);
      Expresion();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
